updated oscar toolkit gear with new acquisition code from flywheel, fixed several little bugs in both oscar toolkit and idia gears

--- a/gears/oscar_toolkit/config.json
+++ b/gears/oscar_toolkit/config.json
@@ -6,5 +6,7 @@
             "key": "flywheelaz.uwhealth.org:djEfiALy55nFsQ99M4E6ZQAW8F53fYucPUqU8HQhlZ4dBfsWZ-BYOcpCQ"
         }
     },
-    "destination": {}
+    "destination": {
+        "id": "689216162ae01be93a112ee8"
+    }
 }
