--- a/processor/docker_app/docker-compose.yaml
+++ b/processor/docker_app/docker-compose.yaml
@@ -7,12 +7,13 @@ services:
           devices:
           - capabilities:
             - gpu
-            count: all
+            count: '2'
             driver: nvidia
     environment:
-      dicom_raw_MOUNT_POINT: /home/aa-cxk023/share/scratch/rrs_radsurv_processor_1754431223.7416158
-      nifti_raw_MOUNT_POINT: /home/aa-cxk023/share/scratch/rrs_radsurv_processor_1754431223.7416158
-      preprocessed_MOUNT_POINT: /home/aa-cxk023/share/scratch/rrs_radsurv_processor_1754431223.7416158
+      dicom_raw_MOUNT_POINT: /home/aa-cxk023/share/scratch/rrs_radsurv_processor_1755544258.4485688
+      dicom_sorted_MOUNT_POINT: /home/aa-cxk023/share/scratch/rrs_radsurv_processor_1755544258.4485688
+      nifti_raw_MOUNT_POINT: /home/aa-cxk023/share/scratch/rrs_radsurv_processor_1755544258.4485688
+      preprocessed_MOUNT_POINT: /home/aa-cxk023/share/scratch/rrs_radsurv_processor_1755544258.4485688
     image: rrs_radsurv_processor
     ipc: host
     ports:
@@ -20,14 +21,16 @@ services:
     stdin_open: true
     tty: true
     volumes:
-    - /home/aa-cxk023/share/scratch/rrs_radsurv_processor_1754431223.7416158:/scratch
+    - /home/aa-cxk023/share/scratch/rrs_radsurv_processor_1755544258.4485688:/scratch
     - /mnt/RadServiceCache/files:/files
-    - /home/aa-cxk023/share/scratch/rrs_radsurv_processor_1754431223.7416158/dicom_raw:/dicom_raw
-    - /home/aa-cxk023/share/scratch/rrs_radsurv_processor_1754431223.7416158/nifti_raw:/nifti_raw
-    - /home/aa-cxk023/share/scratch/rrs_radsurv_processor_1754431223.7416158/preprocessed:/preprocessed
+    - /home/aa-cxk023/share/scratch/rrs_radsurv_processor_1755544258.4485688/dicom_raw:/dicom_raw
+    - /home/aa-cxk023/share/scratch/rrs_radsurv_processor_1755544258.4485688/dicom_sorted:/dicom_sorted
+    - /home/aa-cxk023/share/scratch/rrs_radsurv_processor_1755544258.4485688/nifti_raw:/nifti_raw
+    - /home/aa-cxk023/share/scratch/rrs_radsurv_processor_1755544258.4485688/preprocessed:/preprocessed
     - /home/aa-cxk023/share/scratch/script.yaml:/script.yaml
 volumes:
   dicom_raw: null
+  dicom_sorted: null
   files: null
   nifti_raw: null
   preprocessed: null
